--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
                     <target>11</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>2.1.0.Beta1</version>
+            </plugin>
         </plugins>
         <finalName>Helados</finalName>
     </build>
