--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,8 @@
         <wildfly-home>/usr/local/opt/wildfly-as</wildfly-home>
         <wildfly-hostname>127.0.0.1</wildfly-hostname>
         <wildfly-port>9990</wildfly-port>
-        <wildfly-username>KevinRey</wildfly-username>
-        <wildfly-password>kevin1992</wildfly-password>
+        <wildfly-username>prueba</wildfly-username>
+        <wildfly-password>prueba</wildfly-password>
     </properties>
     <build>
         <plugins>
